--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "auth0-lock": "^10.12.2",
     "body-parser": "1.17.1",
     "express": "^4.14.1",
+    "feedparser": "2.1.0",
     "isomorphic-fetch": "2.2.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
@@ -21,6 +22,7 @@
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "redux-thunk": "2.2.0",
+    "request": "2.81.0",
     "uuid4": "1.0.0"
   },
   "devDependencies": {
