--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "auth0-lock": "^10.12.2",
+    "auth0-lock": "10.14.0",
     "body-parser": "1.17.1",
     "express": "^4.14.1",
     "feedparser": "2.1.0",
@@ -28,8 +28,13 @@
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.0",
+    "babel-plugin-stylus-compiler": "1.4.0",
+    "babel-plugin-transform-css-import-to-string": "0.0.2",
+    "babel-plugin-version-inline": "1.0.0",
     "babel-preset-env": "^1.1.8",
+    "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "6.22.0",
     "babel-preset-stage-1": "^6.22.0",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
