--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "feedparser": "2.1.0",
     "isomorphic-fetch": "2.2.1",
     "pg": "6.1.5",
-    "postchain-client": "ssh://git@bitbucket.org/chromawallet/postchain-client.git",
+    "postchain-client": "^0.1.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
