--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "isomorphic-fetch": "2.2.1",
     "pg": "6.1.5",
     "postchain-client": "^0.1.0",
+    "prop-types": "15.5.8",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
