--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --watch src/server --watch index.js -e js",
+    "debug": "nodemon --inspect --watch src/server --watch index.js -e js",
     "build": "webpack --config webpack.config.babel.js"
   },
   "author": "",
